@@ -3,6 +3,13 @@
 	* Version 1.5.2
 	* Documentation: Update.
 
+	* Source/cifframe.m (cifframe_from_info): Include retval in
+	cifframe_t struct not as pass-back argument.
+	* Source/GSFFIInvocation.m (-initWithMethodSignature:): Get retval
+	from cifframe.
+	(-initWithCallback:...): Idem.
+	(GSFFIInvocationCallback): Set return pointer in closure.
+
 2003-02-16  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/GSDictionary.m: ([-isEqualToDictionary:]) implement optimised
